--- a/src/precss/content.less
+++ b/src/precss/content.less
@@ -40,9 +40,11 @@
 }
 main,.main{
   order: 1;
-  flex:1 0 calc(100% / 12 * 3 - 20px);
+  flex:1 0 calc(100% / 12 * 9 - 20px);
   box-sizing: border-box;
+  margin:0 -@offset_one_side;
   .promotion{
+    margin: 0 @offset_one_side;
     &-slider{
       overflow:hidden;
       height: 280px;
@@ -104,11 +106,11 @@ main,.main{
     }
     &-blocks{
       display: flex;
-     .flexwrap(@offset_one_side);
-      flex-wrap: nowrap;
+      margin: 0 -@offset_one_side;
+      margin-top: 10px;
       figure{
         flex:1 1 calc(@wrap_width / 12 * 3 - @offset);
-        margin: 15px @offset_one_side;
+        margin: 0 @offset_one_side;
         border: 2px solid #b3b5b5;
         box-sizing: border-box;
         padding: 10px;
@@ -135,7 +137,8 @@ main,.main{
   }
   .new,.sale{
     width: 100%;
-    .flexwrap(@offset_one_side);
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     figure:before{
       content: "new";
@@ -156,8 +159,7 @@ main,.main{
       border-bottom: 1px solid lightgray;
       text-transform: uppercase;
       width: 100%;
-      margin-left: @offset_one_side;
-      margin-bottom: 15px;
+      margin: 0 @offset_one_side 15px;
     }
   }
 }
@@ -165,6 +167,7 @@ main,.main{
   display: flex;
   flex-direction: column-reverse;
   .size(@n, 2, @offset);
+  flex-grow: 1;
   padding: 10px;
   text-align: center;
   border: 1px solid lightgray;
